Fix: Adjust image overlap on homepage

--- a/src/pages/Home/components/Middle/middle.module.css
+++ b/src/pages/Home/components/Middle/middle.module.css
@@ -55,6 +55,7 @@
   padding: 0;
   align-items: center;
   perspective: 100px;
+  flex-shrink: 0;
 }
 
 .slide img {
@@ -77,7 +78,8 @@
 .slideContainer img {
   display: block;
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 
 .titleOverlay {
